@@ -1,2 +1,8 @@
 JavOllama
 Java implementation of the Ollama project 
+
+add this VM option to the JVM when you run the project:
+--enable-preview --add-modules jdk.incubator.vector
+
+example call of the program:
+--model=D:/downloads/Meta-Llama-3.1-8B-Instruct-Q4_0.gguf --prompt="Why is the sky blue?"
